# picopico

./: LICENSE  README.md  pyproject.toml  shell.nix
scripts/: information.py  mod26.py  transformation.py
vlc-2023/: README.md  crypt01.md  crypt02.md  crypt02.py  crypto03.md  crypto04.md  crypto05.md  forensics01.md  forensics03.md  index.html  lsass.DMP  nw01.md  nw02.md  programming01.md  programming02.md  programming03.md  programming03.py  programming04.md  pwn01.md  pwn02.md  pwn03.py  pyproject.toml  regex-flags.txt  trivia.md  web01.md  web02.md  web04.py
vlc-2023/volatility3/symbols/linux/linux/: linux-image-2.6.32-5-amd64-dbg_2.6.32-48squeeze6_amd64.json.xz  linux-image-3.2.0-4-amd64-dbg_3.2.57-3+deb7u2_amd64.json.xz
